module.jai


KeyboardKey :: enum {
    KEY_APOSTROPHE    :: 39;
    KEY_COMMA         :: 44;
    KEY_MINUS         :: 45;
    KEY_PERIOD        :: 46;
    KEY_SLASH         :: 47;
    KEY_ZERO          :: 48;
    KEY_ONE           :: 49;
    KEY_TWO           :: 50;
    KEY_THREE         :: 51;
    KEY_FOUR          :: 52;
    KEY_FIVE          :: 53;
    KEY_SIX           :: 54;
    KEY_SEVEN         :: 55;
    KEY_EIGHT         :: 56;
    KEY_NINE          :: 57;
    KEY_SEMICOLON     :: 59;
    KEY_EQUAL         :: 61;
    KEY_A             :: 65;
    KEY_B             :: 66;
    KEY_C             :: 67;
    KEY_D             :: 68;
    KEY_E             :: 69;
    KEY_F             :: 70;
    KEY_G             :: 71;
    KEY_H             :: 72;
    KEY_I             :: 73;
    KEY_J             :: 74;
    KEY_K             :: 75;
    KEY_L             :: 76;
    KEY_M             :: 77;
    KEY_N             :: 78;
    KEY_O             :: 79;
    KEY_P             :: 80;
    KEY_Q             :: 81;
    KEY_R             :: 82;
    KEY_S             :: 83;
    KEY_T             :: 84;
    KEY_U             :: 85;
    KEY_V             :: 86;
    KEY_W             :: 87;
    KEY_X             :: 88;
    KEY_Y             :: 89;
    KEY_Z             :: 90;
    // Function keys
    KEY_SPACE         :: 32;
    KEY_ESCAPE        :: 256;
    KEY_ENTER         :: 257;
    KEY_TAB           :: 258;
    KEY_BACKSPACE     :: 259;
    KEY_INSERT        :: 260;
    KEY_DELETE        :: 261;
    KEY_RIGHT         :: 262;
    KEY_LEFT          :: 263;
    KEY_DOWN          :: 264;
    KEY_UP            :: 265;
    KEY_PAGE_UP       :: 266;
    KEY_PAGE_DOWN     :: 267;
    KEY_HOME          :: 268;
    KEY_END           :: 269;
    KEY_CAPS_LOCK     :: 280;
    KEY_SCROLL_LOCK   :: 281;
    KEY_NUM_LOCK      :: 282;
    KEY_PRINT_SCREEN  :: 283;
    KEY_PAUSE         :: 284;
    KEY_F1            :: 290;
    KEY_F2            :: 291;
    KEY_F3            :: 292;
    KEY_F4            :: 293;
    KEY_F5            :: 294;
    KEY_F6            :: 295;
    KEY_F7            :: 296;
    KEY_F8            :: 297;
    KEY_F9            :: 298;
    KEY_F10           :: 299;
    KEY_F11           :: 300;
    KEY_F12           :: 301;
    KEY_LEFT_SHIFT    :: 340;
    KEY_LEFT_CONTROL  :: 341;
    KEY_LEFT_ALT      :: 342;
    KEY_LEFT_SUPER    :: 343;
    KEY_RIGHT_SHIFT   :: 344;
    KEY_RIGHT_CONTROL :: 345;
    KEY_RIGHT_ALT     :: 346;
    KEY_RIGHT_SUPER   :: 347;
    KEY_KB_MENU       :: 348;
    KEY_LEFT_BRACKET  :: 91;
    KEY_BACKSLASH     :: 92;
    KEY_RIGHT_BRACKET :: 93;
    KEY_GRAVE         :: 96;
    // Keypad keys
    KEY_KP_0          :: 320;
    KEY_KP_1          :: 321;
    KEY_KP_2          :: 322;
    KEY_KP_3          :: 323;
    KEY_KP_4          :: 324;
    KEY_KP_5          :: 325;
    KEY_KP_6          :: 326;
    KEY_KP_7          :: 327;
    KEY_KP_8          :: 328;
    KEY_KP_9          :: 329;
    KEY_KP_DECIMAL    :: 330;
    KEY_KP_DIVIDE     :: 331;
    KEY_KP_MULTIPLY   :: 332;
    KEY_KP_SUBTRACT   :: 333;
    KEY_KP_ADD        :: 334;
    KEY_KP_ENTER      :: 335;
    KEY_KP_EQUAL      :: 336;
}

MouseButton :: enum {
    MOUSE_LEFT_BUTTON;
    MOUSE_RIGHT_BUTTON;
    MOUSE_MIDDLE_BUTTON;
}

// Input-related functions: keyboard
IsKeyPressed  :: (key: KeyboardKey) -> bool #foreign raylib;
IsKeyDown     :: (key: KeyboardKey) -> bool #foreign raylib;
IsKeyReleased :: (key: KeyboardKey) -> bool #foreign raylib;
IsKeyUp       :: (key: KeyboardKey) -> bool #foreign raylib;
SetExitKey    :: (key: KeyboardKey) #foreign raylib;
GetKeyPressed :: () -> KeyboardKey #foreign raylib;

// Input-related functions: gamepads
GamepadNumber :: enum {
    GAMEPAD_PLAYER1;
    GAMEPAD_PLAYER2;
    GAMEPAD_PLAYER3;
    GAMEPAD_PLAYER4;
}

GamepadButton :: enum {
    GAMEPAD_BUTTON_UNKNOWN;

    // This is normally a DPAD
    GAMEPAD_BUTTON_LEFT_FACE_UP;
    GAMEPAD_BUTTON_LEFT_FACE_RIGHT;
    GAMEPAD_BUTTON_LEFT_FACE_DOWN;
    GAMEPAD_BUTTON_LEFT_FACE_LEFT;

    // This normally corresponds with PlayStation and Xbox controllers
    // XBOX: [Y,X,A,B]
    // PS3: [Triangle,Square,Cross,Circle]
    // No support for 6 button controllers though..
    GAMEPAD_BUTTON_RIGHT_FACE_UP;
    GAMEPAD_BUTTON_RIGHT_FACE_RIGHT;
    GAMEPAD_BUTTON_RIGHT_FACE_DOWN;
    GAMEPAD_BUTTON_RIGHT_FACE_LEFT;

    // Triggers
    GAMEPAD_BUTTON_LEFT_TRIGGER_1;
    GAMEPAD_BUTTON_LEFT_TRIGGER_2;
    GAMEPAD_BUTTON_RIGHT_TRIGGER_1;
    GAMEPAD_BUTTON_RIGHT_TRIGGER_2;

    // These are buttons in the center of the gamepad
    GAMEPAD_BUTTON_MIDDLE_LEFT;     //PS3 Select
    GAMEPAD_BUTTON_MIDDLE;          //PS Button/XBOX Button
    GAMEPAD_BUTTON_MIDDLE_RIGHT;    //PS3 Start

    // These are the joystick press in buttons
    GAMEPAD_BUTTON_LEFT_THUMB;
    GAMEPAD_BUTTON_RIGHT_THUMB;
}

GamepadAxis :: enum {
    // This is here just for error checking
    GAMEPAD_AXIS_UNKNOWN;

    // Left stick
    GAMEPAD_AXIS_LEFT_X;
    GAMEPAD_AXIS_LEFT_Y;

    // Right stick
    GAMEPAD_AXIS_RIGHT_X;
    GAMEPAD_AXIS_RIGHT_Y;

    // Pressure levels for the back triggers
    GAMEPAD_AXIS_LEFT_TRIGGER;     // [1..-1] (pressure-level)
    GAMEPAD_AXIS_RIGHT_TRIGGER;    // [1..-1] (pressure-level)
}

IsGamepadAvailable      :: (gamepad: GamepadNumber) -> bool #foreign raylib;
IsGamepadName           :: (gamepad: GamepadNumber, name: *u8) -> bool #foreign raylib;
GetGamepadName          :: (gamepad: GamepadNumber) -> *u8 #foreign raylib;
IsGamepadButtonPressed  :: (gamepad: GamepadNumber, button: GamepadButton) -> bool #foreign raylib;
IsGamepadButtonDown     :: (gamepad: GamepadNumber, button: GamepadButton) -> bool #foreign raylib;
IsGamepadButtonReleased :: (gamepad: GamepadNumber, button: GamepadButton) -> bool #foreign raylib;
IsGamepadButtonUp       :: (gamepad: GamepadNumber, button: GamepadButton) -> bool #foreign raylib;
GetGamepadButtonPressed :: () -> GamepadButton #foreign raylib;
GetGamepadAxisCount     :: (gamepad: GamepadNumber) -> GamepadAxis #foreign raylib;
GetGamepadAxisMovement  :: (gamepad: GamepadNumber, axis: GamepadAxis) -> float32 #foreign raylib;

// Input-related functions: mouse
IsMouseButtonPressed  :: (button: MouseButton) -> bool #foreign raylib;
IsMouseButtonDown     :: (button: MouseButton) -> bool #foreign raylib;
IsMouseButtonReleased :: (button: MouseButton) -> bool #foreign raylib;
IsMouseButtonUp       :: (button: MouseButton) -> bool #foreign raylib;
GetMouseX             :: () -> s32 #foreign raylib;
GetMouseY             :: () -> s32 #foreign raylib;
GetMousePosition      :: () -> Vector2 #foreign raylib;
SetMousePosition      :: (x: s32, y: s32) #foreign raylib;
SetMouseOffset        :: (offsetX: s32, offsetY: s32) #foreign raylib;
SetMouseScale         :: (scaleX: float32, scaleY: float32) #foreign raylib;
GetMouseWheelMove     :: () -> s32 #foreign raylib;

// Input-related functions: touch
GetTouchX        :: () -> s32 #foreign raylib;
GetTouchY        :: () -> s32 #foreign raylib;
GetTouchPosition :: (index: s32) -> Vector2 #foreign raylib;

GestureType :: enum {
    GESTURE_NONE        :: 0;
    GESTURE_TAP         :: 1;
    GESTURE_DOUBLETAP   :: 2;
    GESTURE_HOLD        :: 4;
    GESTURE_DRAG        :: 8;
    GESTURE_SWIPE_RIGHT :: 16;
    GESTURE_SWIPE_LEFT  :: 32;
    GESTURE_SWIPE_UP    :: 64;
    GESTURE_SWIPE_DOWN  :: 128;
    GESTURE_PINCH_IN    :: 256;
    GESTURE_PINCH_OUT   :: 512;
}

// Gestures and Touch Handling Functions (Module: gestures)
SetGesturesEnabled     :: (gestureFlags: GestureType) #foreign raylib;
IsGestureDetected      :: (gesture: GestureType) -> bool #foreign raylib;
GetGestureDetected     :: () -> GestureType #foreign raylib;
GetTouchPointsCount    :: () -> s32 #foreign raylib;
GetGestureHoldDuration :: () -> float32 #foreign raylib;
GetGestureDragVector   :: () -> Vector2 #foreign raylib;
GetGestureDragAngle    :: () -> float32 #foreign raylib;
GetGesturePinchVector  :: () -> Vector2 #foreign raylib;
GetGesturePinchAngle   :: () -> float32 #foreign raylib;

SetCameraMode :: (camera: Camera, mode: CameraMode) #foreign raylib;
UpdateCamera  :: (camera: *Camera) #foreign raylib;

// SetCameraPanControl        :: (int panKey) #foreign raylib;
// SetCameraAltControl        :: (int altKey) #foreign raylib;
// SetCameraSmoothZoomControl :: (int szKey) #foreign raylib;
// SetCameraMoveControls      :: (int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey) #foreign raylib;
